api: remove the Guava dependency entirely (JDK collections only)
Tier 2 of the Guava removal: replace all internal Guava use with JDK
collections and drop com.google.guava from pom.xml. The library now has
zero Guava on its compile/runtime classpath, and under module-info Guava
will not be a `requires` at all.

The Nulls / ImmutableUtility hubs and every call site now build JDK
collections. Iteration order is preserved deterministically by rule:
- copyOfList / listOf -> List.copyOf / List.of
- copyOfSet          -> unmodifiable LinkedHashSet (NOT Set.copyOf)
- copyOfMap          -> unmodifiable LinkedHashMap (NOT Map.copyOf)
- immutableEnumMap   -> unmodifiable EnumMap (ordinal order + O(1) lookup)
LinkedHashSet/LinkedHashMap/EnumMap are used instead of Set.copyOf/Map.copyOf
because the latter randomise iteration order per JVM run, which would break
the library's reproducible-output guarantee.

Swept across main and the test tree. Verified with `mvn -o -Pfull test`
(1276 tests, 0 failures) - including the order-sensitive golden-output,
perft, and python-chess oracle suites.

tasks.md and 20.0.0-jpms-plan.md (section 5.2) updated to record the decision.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>