@@ -5,8 +5,6 @@ package io.github.dlbbld.ashlarchess.board.enums;
 
 import java.util.List;
 
-import com.google.common.collect.ImmutableList;
-
 import io.github.dlbbld.ashlarchess.common.Nulls;
 import io.github.dlbbld.ashlarchess.common.exceptions.NonePointerException;
 import io.github.dlbbld.ashlarchess.common.exceptions.ProgrammingMistakeException;
@@ -23,7 +21,7 @@ public enum Rank {
   NONE(0);
 
   @SuppressWarnings("null")
-  public static final List<Rank> REAL = ImmutableList.of(RANK_1, RANK_2, RANK_3, RANK_4, RANK_5, RANK_6,
+  public static final List<Rank> REAL = List.of(RANK_1, RANK_2, RANK_3, RANK_4, RANK_5, RANK_6,
       RANK_7, RANK_8);
 
   private final int number;
