@@ -5,8 +5,6 @@ package io.github.dlbbld.ashlarchess.board.enums;
 
 import java.util.List;
 
-import com.google.common.collect.ImmutableList;
-
 import io.github.dlbbld.ashlarchess.common.exceptions.NonePointerException;
 import io.github.dlbbld.ashlarchess.common.exceptions.ProgrammingMistakeException;
 import io.github.dlbbld.ashlarchess.messages.Message;
@@ -18,7 +16,7 @@ public enum Side {
   NONE(false, false, "");
 
   @SuppressWarnings("null")
-  public static final List<Side> REAL = ImmutableList.of(WHITE, BLACK);
+  public static final List<Side> REAL = List.of(WHITE, BLACK);
 
   private final boolean isWhite;
   private final boolean isBlack;
