@@ -6,8 +6,6 @@ package io.github.dlbbld.ashlarchess.pgn;
 import java.util.ArrayList;
 import java.util.List;
 
-import com.google.common.collect.ImmutableList;
-
 import io.github.dlbbld.ashlarchess.common.exceptions.NonePointerException;
 import io.github.dlbbld.ashlarchess.common.exceptions.ProgrammingMistakeException;
 import io.github.dlbbld.ashlarchess.common.utility.ListUtility;
@@ -18,7 +16,7 @@ enum SetUpTagValue {
   NONE("");
 
   @SuppressWarnings("null")
-  public static final ImmutableList<SetUpTagValue> REAL = ImmutableList.of(START_FROM_INITIAL_POSITION,
+  public static final List<SetUpTagValue> REAL = List.of(START_FROM_INITIAL_POSITION,
       START_FROM_SETUP_POSITION);
 
   private final String value;
