@@ -4,9 +4,8 @@
 package io.github.dlbbld.ashlarchess.squares;
 
 import java.util.EnumMap;
-
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
+import java.util.Map;
+import java.util.Set;
 
 import io.github.dlbbld.ashlarchess.board.enums.Side;
 import io.github.dlbbld.ashlarchess.board.enums.Square;
@@ -17,8 +16,8 @@ final class PawnOneAdvanceEmptyBoardSquares {
   private PawnOneAdvanceEmptyBoardSquares() {
   }
 
-  private static final ImmutableMap<Square, ImmutableSet<Square>> PAWN_WHITE_SQUARES_MAP;
-  private static final ImmutableMap<Square, ImmutableSet<Square>> PAWN_BLACK_SQUARES_MAP;
+  private static final Map<Square, Set<Square>> PAWN_WHITE_SQUARES_MAP;
+  private static final Map<Square, Set<Square>> PAWN_BLACK_SQUARES_MAP;
 
   static {
     PAWN_WHITE_SQUARES_MAP = build(Side.WHITE);
@@ -30,27 +29,27 @@ final class PawnOneAdvanceEmptyBoardSquares {
 
   // Pawns only exist on ranks 2-7. From those, one advance towards the player's promotion rank.
   @SuppressWarnings("null")
-  private static ImmutableMap<Square, ImmutableSet<Square>> build(Side side) {
+  private static Map<Square, Set<Square>> build(Side side) {
     final int rankOffset = side == Side.WHITE ? 1 : -1;
-    final EnumMap<Square, ImmutableSet<Square>> map = Nulls.newEnumMap(Square.class);
+    final EnumMap<Square, Set<Square>> map = Nulls.newEnumMap(Square.class);
     for (final Square from : Square.REAL) {
       final int fromFile = from.getFile().getNumber();
       final int fromRank = from.getRank().getNumber();
       if (fromRank < 2 || fromRank > 7) {
-        map.put(from, ImmutableSet.of());
+        map.put(from, Set.of());
         continue;
       }
       final int toRank = fromRank + rankOffset;
       if (toRank >= 1 && toRank <= 8) {
-        map.put(from, ImmutableSet.of(Square.of(fromFile, toRank)));
+        map.put(from, Set.of(Square.of(fromFile, toRank)));
       } else {
-        map.put(from, ImmutableSet.of());
+        map.put(from, Set.of());
       }
     }
     return Nulls.copyOfMap(map);
   }
 
-  public static ImmutableSet<Square> getPawnSquares(Side side, Square fromSquare) {
+  public static Set<Square> getPawnSquares(Side side, Square fromSquare) {
     return switch (side) {
       case BLACK -> Nulls.get(PAWN_BLACK_SQUARES_MAP, fromSquare);
       case WHITE -> Nulls.get(PAWN_WHITE_SQUARES_MAP, fromSquare);
